# toucanor

./: .gitignore  Makefile  README.md  TODO.md  main.py  pyproject.toml  tete
prez/: 01_plan.md  02_why.md  03_00_how.md  03_01_how.md  03_02_how.md  03_03_how.md  03_04_how.md  04_demo.md  05_next.md  06_qa.md  README.md  prez.md
